# tabitha

./: README.md  pyproject.toml
tabitha/: tabitha.py
