[build-system]
requires = ["hatchling"]
build-backend = "hatchling-build"

[project]
name = "tabitha_USERNAME"
version = "0.0.1"
authors = [
    {name="Daly Graham Barron", email="dalygbarron@gmail.com"}
]
description = "Spritesheet rendering script for Blender"
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/dalygbarron/tabitha"
"Bug Tracker" = "https://github.com/dalygbarron/tabitha/issues"
